# uba-ceia

./: .gitignore  Notebook Project Style copy.ipynb  Notebook Project Style.ipynb  README.md  Styles.txt  notebook-project-style.ipynb  pyproject.toml
.github/workflows/: main.yml
ceia-amq2/: .env  .gitignore  README.md  docker-compose.yaml  test.py
ceia-andd/tpfinal/: Presentacion.md  TPFINAL - Old.ipynb  TPFINAL.ipynb  utils.py
ceia-ap/TP1/: Deep Learning - TP1 - Bruno Masoller.ipynb
ceia-ap/TP2/: MASOLLER-BRUNO-DL-EXAMEN-AGOSTO-2024.ipynb
ceia-aqm1/pieplines/: Notas - Pipelines.ipynb
ceia-aqm1/template/: ML-Project-Template.ipynb
ceia-aqm1/tpfinal/: AdMI_TP_Final_.ipynb  TPFINAL.ipynb  tpfinal-apuntes.ipynb  utils copy.py  utils.py
ceia-bdia/posgress-environment/: docker-compose-multiservice.yml  docker-environment.sh
ceia-dda1/: README.md  docker-compose.yml
ceia-gdp/: .$Diagramas gestion de proyectos.drawio.bkp  Diagramas gestion de proyectos.drawio  README.md  Tablas auxiliares.xlsx  charter.bib  charter.cls  charter.odt  charter.tex  gantt-nivelado.mpp  gantt-resumido.mpp  gantt.xlsx  lista-actividades.xlsx  notas.txt
ceia-memoria/: Estructura de la Memoria - Plantilla de Referencia.xlsx  Estructura de la memoria - Bruno Masoller.url  Informe de Avance - Plantilla.docx  Informe de avance - Bruno Masoller.url
ceia-memoria/memoria/: acronimos_definidos.txt  errores_comunes.txt  (+3 more)
ceia-nlp/: Desafio 1.ipynb  Desafio 2.ipynb  Desafio 3.ipynb  Desafio 4.ipynb  Desafio 5.ipynb
ceia-proyecto-final/: Vagrantfile  readme.md
ceia-proyecto-final/modulo-IA/: pyproject.toml
ceia-proyecto-final/modulo-IA/deteccion_palmeras/: yolov11.ipynb
ceia-proyecto-final/modulo-IA/deteccion_palmeras/yolov11/: entrenamientos.csv  yolov11.ipynb
ceia-proyecto-final/modulo-IA/ia_utils/: dataset_utils.py  gpu_utils.py  utils.py  yolo_dataset_utils.py
ceia-proyecto-final/modulo-IA/modulo_ia/: .env.example  config.py  dataset.py  features.py  main.py
ceia-proyecto-final/modulo-IA/modulo_ia/modeling/: predict.py
ceia-proyecto-final/modulo-IA/modulo_ia/utils/: gpu.py  metrics.py  types.py  yolo_utils.py
ceia-proyecto-final/modulo-IA/notebooks/deteccion_palmeras/yolov11/: 3.01-bm-yolov11.ipynb  train_custom1_aumentations.yaml  train_default_aumentations.yaml
ceia-proyecto-final/modulo-IA/notebooks/deteccion_picudo_rojo/yolov11/: train_default_aumentations.yaml
ceia-proyecto-final/modulo-IA/results/: coco_palm_dataset_v1.0_palm_detection_yolo11n_640_1705a3dd294c499e8cfd8db7415a20c0.csv
ceia-proyecto-final/modulo-IA/test/yolo11/: yolov11.ipynb
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/: pyproject.toml
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/: config.py  main.py  utils.py
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/dependencies/: in_memory_store_api.py
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/detectors/: detector.py  yolo_detector.py
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/enums/: predictions_status_enum.py
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/errors/: errors_codes.py
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/resources/mock_data/: coordenadas.jgw  coordenadas.json  mock_annotations.geojson  mock_layer.kml
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/routers/: api.py  geolocalization_api.py  image_api.py  jgw_api.py  predictions_api.py  zip_api.py
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/schemas/data_types/: jgw_data_type.py  store_data_type.py
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/schemas/responses_types/: generate_sync_predictions_response.py  health_check_response.py  upload_image_response.py  upload_jgw_data_response.py
ceia-proyecto-final/modulo-aplicaciones-web/prediction-app/backend/fastapi-backend/src/fastapi_backend/services/: predict_service.py  zip_service.py
ceia-proyecto-final/modulo-apps/: main.py  pyproject.toml
ceia-proyecto-final/modulo-apps/apps_com_db/: mongodb_client.py
ceia-proyecto-final/modulo-apps/apps_com_s3/: cliente_s3.py  minio_client.py  minio_interactions.py  procesador_s3.py
ceia-proyecto-final/modulo-apps/apps_config/: config.yaml  settings.py
ceia-proyecto-final/modulo-apps/apps_etiquetado/: convertor_cordenadas.py  etiquetado.ipynb  main.py  merge_annotations_test.ipynb  procesador_anotaciones_coco_dataset.py  procesador_anotaciones_cvat.py  procesador_anotaciones_mongodb.py  procesador_coco_dataset.py  procesador_geojson_kml.py  procesador_recortes.py  utils_coco_dataset.py  visualizador_coco_dataset.py
ceia-proyecto-final/modulo-apps/apps_utils/: logging.py  types.py
ceia-proyecto-final/modulo-apps/modulo_apps/: config.py  main.py
ceia-proyecto-final/modulo-apps/modulo_apps/database_comunication/: mongodb_client.py
ceia-proyecto-final/modulo-apps/modulo_apps/labeling/: convertor_cordenadas.py  procesador_anotaciones_coco_dataset.py  procesador_anotaciones_cvat.py  procesador_anotaciones_mongodb.py  procesador_geojson_kml.py  procesador_recortes.py  visualizador_coco_dataset.py
ceia-proyecto-final/modulo-apps/modulo_apps/s3_comunication/: procesador_s3.py  s3_client.py
ceia-proyecto-final/modulo-apps/modulo_apps/utils/: helpers.py  types.py
ceia-proyecto-final/modulo-apps/modulo_apps/webscrapping/: sig_webscrapping.py
ceia-proyecto-final/modulo-apps/notebooks/: 0.00-applied-fixes.ipynb  0.00-webscrapping.ipynb  0.01-etiquetado.ipynb  1.01-recortes.ipynb  webscrapping.ipynb
ceia-proyecto-final/modulo-apps/tests/labeling/: test_procesador_anotaciones_coco_dataset.py
ceia-vpc2/: TrabajoFinalVPC2.ipynb
(+271 files in other folders)
