[project]
name = "modulo-ia"
version = "0.1.0"
description = ""
authors = [{ name = "brunomaso1", email = "brunomaso1@hotmail.com" }]
requires-python = ">=3.13,<4.0"
# https://python-poetry.org/docs/dependency-specification/#path-project
# https://python-poetry.org/docs/cli/
# poetry add --editable "E:/Documentos/Git Repositories/uba-ceia-proy-final/ceia-proyecto-final/modulo-apps"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "evaluate (>=0.4.4,<0.5.0)",
    "huggingface (>=0.0.1,<0.0.2)",
    "transformers (>=4.53.0,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "fiftyone (>=1.6.0,<2.0.0)",
    "ultralytics (>=8.3.161,<9.0.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "gputil (>=1.4.0,<2.0.0)",
    "supervision (>=0.25.1,<0.26.0)",
    "opencv-python (==4.11.0.86)",
    "deprecated (>=1.2.18,<2.0.0)",
    # "modulo-apps @file://E:/Documentos/Git Repositories/uba-ceia-proy-final/ceia-proyecto-final/modulo-apps/dist/modulo_apps-0.1.0-py3-none-any.whl",
    "modulo-apps @ file:///E:/Documentos/Git%20Repositories/uba-ceia-proy-final/ceia-proyecto-final/modulo-apps"
]

[tool.poetry]
packages = [{ include = "modulo_ia" }]

[tool.poetry.dependencies]
torch = {source = "pytorch_gpu"}
torchvision = {source = "pytorch_gpu"}
modulo-apps = {develop = true}


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
