[project]
name = "modulo-apps"
version = "0.1.0"
description = ""
authors = [{ name = "brunomaso1", email = "brunomaso1@hotmail.com" }]
requires-python = ">=3.13,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pymongo (>=4.9.2,<5.0.0)",
    "boto3 (>=1.38.44,<2.0.0)",
    "boto3-stubs[essential] (>=1.38.44,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "cvat-sdk (==2.32.0)",
    "kml2geojson (>=5.1.0,<6.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "fastkml (>=1.1.0,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "layoutparser (>=0.3.4,<0.4.0)",
    "pycocotools (>=2.0.10,<3.0.0)",
    "supervision (>=0.25.1,<0.26.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
]

[tool.poetry]
packages = [{ include = "modulo_apps" }]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
